--- a/src/app/document-types/document-types.html
+++ b/src/app/document-types/document-types.html
@@ -234,6 +234,8 @@
                 [onFileChange]="dynamicFormService.onFileChange"
                 [getFileNames]="dynamicFormService.getFileNames"
                 [removeSingleFile]="dynamicFormService.removeSingleFile"
+                [isExistingFile]="dynamicFormService.isExistingFile"
+                [openExistingFile]="dynamicFormService.openExistingFile"
               />
               
               <div class="preview-info">
