--- a/src/app/documents/documents.html
+++ b/src/app/documents/documents.html
@@ -70,6 +70,8 @@
               [onFileChange]="dynamicFormService.onFileChange"
               [getFileNames]="dynamicFormService.getFileNames"
               [removeSingleFile]="dynamicFormService.removeSingleFile"
+              [isExistingFile]="dynamicFormService.isExistingFile"
+              [openExistingFile]="dynamicFormService.openExistingFile"
             />
           }
 
