--- a/src/app/document-types/document-types.less
+++ b/src/app/document-types/document-types.less
@@ -672,6 +672,11 @@
             font-weight: @font-weight-semi;
           }
 
+          .workflow-count {
+            color: #27ae60;
+            font-weight: @font-weight-semi;
+          }
+
           .template-count {
             color: @purple;
             font-weight: @font-weight-semi;
