--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -44,6 +44,12 @@
         </a>
       </li>
       <li>
+        <a routerLink="/reporting" routerLinkActive="active" (click)="onNavigationClick()">
+          <i class="icon">📊</i>
+          Reporting
+        </a>
+      </li>
+      <li>
         <a routerLink="/chat" routerLinkActive="active" (click)="onNavigationClick()">
           <i class="icon">💬</i>
           Chat
