--- a/src/app/workflows/workflows.less
+++ b/src/app/workflows/workflows.less
@@ -693,6 +693,11 @@
                 color: #9b59b6;
                 font-weight: @font-weight-semi;
               }
+
+              .project-count {
+                color: #f39c12;
+                font-weight: @font-weight-semi;
+              }
             }
           }
         }
@@ -897,6 +902,11 @@
 
           .doc-type-count {
             color: #9b59b6;
+            font-weight: @font-weight-semi;
+          }
+
+          .project-count {
+            color: #f39c12;
             font-weight: @font-weight-semi;
           }
 
